投票，增加图片选项

--- a/weapp/apps/customerized_apps/event/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/event/templates/editor/workbench.html
@@ -7,6 +7,9 @@
         .form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control{
             cursor: pointer;
         }
+        .propertyGroup_property_horizontalField .propertyGroup_property_label{
+            min-width: 70px;
+        }
     </style>
 {% endblock %}
 
