--- a/weapp/apps/customerized_apps/vote/templates/editor/vote_participances.html
+++ b/weapp/apps/customerized_apps/vote/templates/editor/vote_participances.html
@@ -10,6 +10,12 @@
     td.xui-result_fr-i-td0{
         width: 50%;
     }
+    td img{
+        width: 50px;
+        height: 50px;
+        border-radius: 5px;
+        margin: 0 5px;
+    }
     </style>
 {% endblock %}
 {% block content-panel %}
