--- a/weapp/termite/static/v4/css/app_widget.css
+++ b/weapp/termite/static/v4/css/app_widget.css
@@ -1175,3 +1175,102 @@ p.wui-i-start_time,p.wui-i-end_time{
 .wui-powerme-container.yellow .wui-i-states ul li:not(.wui-i-top100-title) {
 	border-bottom: 1px dotted #cac8b0;
 }
+
+/* 百宝箱 vote new style ---start*/
+div, span, a, ul, li{ /*防止ios点击闪屏*/
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+.wui-imageSelection{
+	padding: 15px 20px 0 20px;
+}
+.wui-imageSelection .wui-i-mandatory {
+	color: #CDCDCD;
+}
+.wui-imageSelection .wui-i-title {
+	color: #333;
+	margin-bottom: 10px;
+	font-size: 18px;
+	font-weight: bold;
+	border-left: solid 4px #1AA2F8;
+	padding-left: 10px;
+}
+.wui-inner-img{
+	display: block;
+    overflow: hidden;
+    background: #f5f5f5;
+    padding-bottom: 100%;
+    height: 0;
+	position: relative;
+}
+.wui-selectBox-display-list .wui-inner-selectionwithimage{
+	width: 30%;
+	display: inline-block;
+    float: left;
+	min-width: 130px;
+    min-height: 130px;
+	margin-right: 10px;
+}
+.wui-selectBox-display-list .wui-selectionwithimage{
+    display: inline-block;
+	margin-bottom: 10px;
+}
+.wui-selectionwithimage img{
+    width: 100%;
+}
+
+.wui-selectionwithimage .wui-i-button{
+	background: url('/termite_static/img/component/vote/selectBox.png') no-repeat;
+	width: 90px;
+	height: 32px;
+}
+
+.wui-selectBox-display-list .wui-i-button{
+    display: -webkit-box;
+    position: relative;
+    margin-top: 90%;
+	margin-left: 10px;
+}
+
+.wui-selectBox-display-list .wui-i-text{
+    display: -webkit-box;
+    position: absolute;
+    font-size: 14px;
+    word-break: break-all;
+    margin-top: 15px;
+    padding-left: 10px;
+	min-width: 130px;
+}
+li.wui-selectBox-display-table {
+    width: 45%;
+    float: left;
+	margin-bottom: 10px;
+	margin-left: 5px;
+}
+.wui-selectBox-display-table .wui-i-text {
+    position: absolute;
+    /*display: inline-block;*/
+	display: block;
+    text-align: center;
+    background: rgba(0, 0, 0, 0.4);
+    font-size: 0.8rem;
+    color: whitesmoke;
+    padding: 5px 0 5px 0;
+	bottom: 0;
+	width: 100%;
+}
+
+.wui-selectBox-display-table .wui-i-button{
+    display: -webkit-box;
+    margin: 0 auto;
+	margin-top: 10px;
+}
+
+.wui-selectBox-multi{
+	background-position-x: -101px !important;
+}
+
+.wui-selectBox-selected{
+	background-position-y: -41px !important;
+}
+
+/* 百宝箱 vote new style ---end*/
