--- a/weapp/static_v2/js/view/mall_product_custom_model_editor/template.html
+++ b/weapp/static_v2/js/view/mall_product_custom_model_editor/template.html
@@ -104,7 +104,7 @@
 				<th width="60">价格（元）</th>
 				<th width="120">库存</th>
 				<th width="60">重量（kg）</th>
-				<th width="60">商品编号</th>
+				<th width="60">商品编码</th>
 				<th width="60">操作</th>
 			</tr>
 		</thead>
