--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -356,6 +356,16 @@
                     }
                 }
                 else{
+                    //必须关注才可以参与的活动
+                    if (W.permission == 'member') {
+                        if (!W.isMember) {
+                            $('body').html('<div class="wui-appParticipantResult-Cover"><div class="wui-qrcode">' +
+                                    '<div class="wui-i-permissionIcon">&#33</div>' +
+                                    '<div class="wui-i-permissionText">请关注后进行参与！</div>'+
+                                    '<img height="205px" width="205px" src="' + W.qrcodeUrl + '">' +
+                                    '</div><div></div>');
+                        }
+                    }
                     $('.selection-radio').click(function(event){
                         var $span = $(event.currentTarget);
                         $span.parents('ul').find('label').find('span :first').removeClass('radio-select');
@@ -449,7 +459,7 @@
                         }
 
                         //必须关注才可以参与的活动
-                        if (W.permission == 'member') {
+                        if (W.permission != 'member') {
                             if (W.isMember == true) {
                                 getParticipance(participanceData,$submitButtonContainer);
 
